# vendor_qcom_opensource_audio-kernel

./: Android.bp  Android.mk  BUILD.bazel  EnableBazel.mk  Kbuild  Makefile  Makefile.am  OWNERS  README.md  audio_kernel_modules.mk  audio_kernel_product_board.mk  audio_kernel_vendor_board.mk  audio_modules.bzl  module_mgr.bzl
asoc/: Kbuild  bengal-port-config.h  bengal.c  gvm_auto_spf_dummy.c  holi.c  kalama-port-config.h  kalama.c  kona.c  msm-audio-defs.h  msm-compress-q6-v2.c  msm-dai-fe.c  msm-dai-q6-v2.c  msm-lsm-client.c  msm-pcm-loopback-v2.c  msm-pcm-q6-noirq.c  msm-pcm-q6-v2.c  msm-pcm-routing-v2.c  msm-pcm-routing-v2.h  msm-slim-dma.h  msm8952.c  msm_bengal_dailink.h  msm_common.c  msm_common.h  msm_dailink.h  msm_holi_dailink.h  pineapple-port-config.h  pineapple.c  sa525m_dailink.h  sdm660-common.c  sdm660-internal.c  sdx-auto-target.c  sdx-target.c  sm6150.c  sm8150.c  waipio-port-config.h  waipio.c
config/: bengalauto.conf  bengalautoconf.h  factoryaudio.h  gvmauto.conf  gvmautoconf.h  holiauto.conf  holiautoconf.h  kalamaauto.conf  kalamaautoconf.h  konaautoconf.h  litoauto.conf  litoautoconf.h  pineappleauto.conf  pineappleautoconf.h  sa525mauto.conf  sa525mautoconf.h  sdm450autoconf.h  sdm710auto.conf  sdm710auto_static.conf  sdm710autoconf.h  sdm845autoconf.h  sdxpinnauto.conf  sdxpinnautoconf.h  sm6150auto.conf  sm6150autoconf.h  sm8150autoconf.h  trinketauto.conf  trinketautoconf.h  waipioauto.conf  waipioautoconf.h
dsp/: Kbuild  adsp-loader.c  adsp_err.c  apr_elliptic.c  audio_notifier.c  audio_prm.c  audio_ssr.c  digital-cdc-rsc-mgr.c  q6_init.c  (+12 more)
(+293 files in other folders)
